--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@
             <p class="text-xl text-gray-400 mb-12 font-bold">
                 日本コロムビア様の案件をはじめ、<br>最先端のプロジェクトがあなたを待っています。
             </p>
-            <a href="https://docs.google.com/forms/" target="_blank" class="group relative inline-flex h-16 items-center justify-center overflow-hidden bg-highlight-red px-12 font-medium text-white transition-all duration-300 hover:scale-105 hover:bg-white hover:text-black">
-                <span class="relative font-display text-xl font-bold tracking-wide">コミュニティに参加する (Google Form)</span>
+            <a href="https://forms.gle/FmmasxeN4ugcg58c6" target="_blank" class="group relative inline-flex h-16 items-center justify-center overflow-hidden bg-highlight-red px-12 font-medium text-white transition-all duration-300 hover:scale-105 hover:bg-white hover:text-black">
+                <span class="relative font-display text-xl font-bold tracking-wide">コミュニティに参加する</span>
             </a>
             <p class="mt-6 text-sm text-gray-500">*Takes less than 5 minutes</p>
         </div>
